# rpm-git-repo

./: .gitignore  .pre-commit-config.yaml  .tool-versions  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  git_command.py  git_trace2_event_log_base.py  main.py  manifest_xml.py  project.py  pyproject.toml  repo  repo_trace.py  requirements-dev.txt  version_constraints.py
.claude/: settings.json  settings.local.json
.devcontainer/: .devcontainer.postcreate.sh  devcontainer-functions.sh  devcontainer.json  fix-line-endings.py  project-setup.sh
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  main-validation.yml  pr-validation.yml  publish.yml
docs/: integration-testing.md  manifest-format.md  python-support.md
git-hooks/: pre-commit  pre-push
subcmds/: envsubst.py  forall.py  init.py  manifest.py  sync.py
tests/: conftest.py  test_abandon_massive.py  test_branches_coverage.py  test_checkout_massive.py  test_cherrypick_coverage.py  test_color.py  test_command.py  test_conftest_fixtures.py  test_diffmanifests_deep.py  test_download_coverage.py  test_editor.py  test_envsubst_massive.py  test_error.py  test_event_log.py  test_event_log_massive.py  test_fetch.py  test_fixture_files.py  test_forall_deep.py  test_git_command.py  test_git_config.py  test_git_refs.py  test_git_superproject.py  test_git_trace2_event_log.py  test_gitconfig_coverage.py  test_grep_deep.py  test_harness_smoke.py  test_hooks.py  test_info_deep.py  test_init_deep.py  test_list_massive.py  test_main.py  test_main_coverage.py  test_main_init_download_boost.py  test_makefile_lint_format.py  test_makefile_structure.py  test_makefile_test_targets.py  test_manifest_coverage_boost.py  test_manifest_deep.py  test_manifest_massive.py  test_manifest_subcmd_massive.py  (+69 more)
tests/fixtures/: README.md  linter-test-bad.md  linter-test-bad.py  linter-test-bad.yml  sample-manifest.xml  sample-project-config.json  version_constraints_data.json
tests/functional/: test_features.py
